<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@drawable/mars">

    <TextView
        android:id="@+id/txtVLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:fontFamily="@font/mars_mission"
        android:text="@string/app_name"
        android:textColor="@color/glina"
        android:textSize="96sp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="87dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        android:paddingBottom="60dp">

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="410dp"
            android:hint="@string/login"
            android:textColor="@color/glina"
            android:fontFamily="@font/mars_mission"
            android:textSize="23sp"
            android:background="@color/glina"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/mars_mission"
            android:textSize="23sp"
            android:hint="@string/SignIn"
            android:background="@color/glina"/>

        <Button
            android:id="@+id/btnPlayGuest"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/mars_mission"
            android:textSize="23sp"
            android:hint="@string/playGuest"
            android:background="@color/glina"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>