<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center"
    tools:context=".activity.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@color/glina"
            android:fontFamily="@font/mars_mission"
            android:hint="@string/logInHint"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@color/glina"
            android:fontFamily="@font/mars_mission"
            android:hint="@string/passHint"
            tools:ignore="MissingConstraints"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/login"
            android:textColor="@color/glina"
            android:fontFamily="@font/mars_mission"
            android:textSize="23sp"
            android:background="@color/glina"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>